--- a/style.css
+++ b/style.css
@@ -1,47 +1,41 @@
-h1::before {  
-    transform: scaleX(0);
-    transform-origin: bottom right;
-  }
-  
-  h1:hover::before {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
-  
-  h1::before {
-    content: " ";
-    display: block;
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    inset: 0 0 0 0;
-    background: hsl(200 100% 80%);
-    z-index: -1;
-    transition: transform .3s ease;
-  }
-  
-  h1 {
-    position: relative;
-    font-size: 5rem;
-  }
-  
-  html {
-    block-size: 100%;
-    inline-size: 100%;
-  }
-  
-  body {
-    min-block-size: 100%;
-    min-inline-size: 100%;
-    margin: 0;
-    box-sizing: border-box;
-    display: grid;
-    place-content: center;
-    font-family: system-ui, sans-serif;
-  }
-  
-  @media (orientation: landscape) {
-    body {
-      grid-auto-flow: column;
-    }
-  }
-  
+html,
+body {
+  font-family: Open Sans;
+  background: #111;
+  text-align: center;
+}
+
+div {
+  border-radius: 8px;
+  background: black;
+  padding: 16px;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+h3 {
+  letter-spacing: 0.6px;
+  margin: 0;
+  padding: 0;
+  color: yellow;
+}
+
+h4 {
+  letter-spacing: 0.4px;
+  margin: 0;
+  padding: 0;
+  color: red;
+  font-size: 11px;
+}
+
+h5 {
+  margin: 0;
+  padding: 0;
+  color: orange;
+}
+
+p {
+  color: grey;
+}
