--- a/style.scss
+++ b/style.scss
@@ -394,7 +394,7 @@ body {
     transform: translate(10px, 4px) scale(1.15);
   }
 }
-
+/*
 @keyframes spazz {
   1% {
     filter:  hue-rotate(136.8deg);
@@ -730,4 +730,6 @@ body {
     background-color: #66c2ff;
     transform: translate(10px, 4px) scale(1.15);
   }
+  
 }
+*/
