--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,7 @@ body {
   -webkit-animation-duration: 17s;
           animation-duration: 17s;
 }
-
+/*
 @-webkit-keyframes spazz {
   1% {
     filter:  hue-rotate(136.8deg);
